[package]
name = "usbd-picotool-reset"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The rp-rs Developers"]

[package.metadata.docs.rs]
features = ["defmt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
usb-device = "0.2.9"
rp2040-hal = "0.8.0"
defmt = { version = ">=0.2.0, <0.4", optional = true }

[dev-dependencies]
rp-pico = "0.7.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
