[package]
name = "usbd-picotool-reset"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The rp-rs Developers"]
description = "USB Class to enable resetting using picotool"
documentation = "https://docs.rs/usbd-picotool-reset"
repository = "https://github.com/ithinuel/usbd-picotool-reset"

[package.metadata.docs.rs]
features = ["defmt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
usb-device = "0.2.9"
rp2040-hal = "0.9.0"
defmt = { version = ">=0.2.0, <0.4", optional = true }

[dev-dependencies]
rp-pico = "0.8.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
